# university-lab1

./: CMakeLists.txt  Makefile  date.cpp  date.h  list.cpp  list.h  main.cpp  product.cpp  product.h
